--- a/transport-logistic/scss/style.css
+++ b/transport-logistic/scss/style.css
@@ -341,17 +341,8 @@ body {
   transition: transform 0.6s, opacity 1.3s;
 }
 @media (any-hover: hover) {
-  .button:hover::after {
+  .button:hover::after, .button:active::after {
     content: "";
-    position: absolute;
-    width: 12.875rem;
-    height: 12.875rem;
-    left: 4.625rem;
-    right: -5.375rem;
-    top: -2.6875rem;
-    bottom: -6.4375rem;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.96);
     opacity: 1;
     transform: scaleX(1);
   }
