--- a/transport-logistic/scss/style.scss
+++ b/transport-logistic/scss/style.scss
@@ -388,25 +388,25 @@ body {
     border-radius: 50%;
     background: $white-color;
     opacity: 0;
-
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 0.6s, opacity 1.3s;
   }
 
   @media (any-hover: hover) {
-    &:hover::after {
+    &:hover::after,
+    &:active::after {
       content: '';
-      position: absolute;
-      width: toRem(206);
-      height: toRem(206);
-      left: toRem(74);
-      right: toRem(-86);
-      top: toRem(-43);
-      bottom: toRem(-103);
-      border-radius: 50%;
-      background: $white-color;
-      //transition: transform 0.6s, opacity 1.3s;
+      //position: absolute;
+      //width: toRem(206);
+      //height: toRem(206);
+      //left: toRem(74);
+      //right: toRem(-86);
+      //top: toRem(-43);
+      //bottom: toRem(-103);
+      //border-radius: 50%;
+      //background: $white-color;
+      ////transition: transform 0.6s, opacity 1.3s;
       opacity: 1;
       transform: scaleX(1);
     }
