--- a/transport-logistic/scss/style.css
+++ b/transport-logistic/scss/style.css
@@ -347,5 +347,12 @@ body {
     transform: scaleX(1);
   }
 }
+@media (any-hover: none) {
+  .button:active::after {
+    content: "";
+    opacity: 1;
+    transform: scaleX(1);
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
