--- a/transport-logistic/scss/style.scss
+++ b/transport-logistic/scss/style.scss
@@ -394,19 +394,8 @@ body {
   }
 
   @media (any-hover: hover) {
-    &:hover::after,
-    &:active::after {
+    &:hover::after {
       content: '';
-      //position: absolute;
-      //width: toRem(206);
-      //height: toRem(206);
-      //left: toRem(74);
-      //right: toRem(-86);
-      //top: toRem(-43);
-      //bottom: toRem(-103);
-      //border-radius: 50%;
-      //background: $white-color;
-      ////transition: transform 0.6s, opacity 1.3s;
       opacity: 1;
       transform: scaleX(1);
     }
@@ -417,8 +406,8 @@ body {
       content: '';
       opacity: 1;
       transform: scaleX(1);
+      transition: transform 0s, opacity 0s;
     }
   }
 }
-
 
