--- a/transport-logistic/scss/style.css
+++ b/transport-logistic/scss/style.css
@@ -88,6 +88,7 @@ textarea {
 }
 
 body {
+  background-color: #6f83ab;
   font-family: "Krub", sans-serif;
   font-size: 1.125rem;
   line-height: 1.2;
@@ -124,7 +125,22 @@ body {
 .header__top {
   padding: 2.875rem 0;
 }
+@media (max-width: 62.99875em) {
+  .header__top {
+    padding: 0.5rem 0;
+  }
+}
+@media (max-width: 61.31125em) {
+  .header__top {
+    padding: 0.9375rem 0;
+  }
+  .menu-open .header__top {
+    padding-bottom: 5.625rem;
+  }
+}
 .tophead {
+  position: relative;
+  z-index: 50;
   background-color: rgb(9, 18, 66);
   color: rgba(255, 255, 255, 0.96);
 }
@@ -137,16 +153,60 @@ body {
   flex-wrap: wrap;
 }
 .tophead__logo {
+  position: relative;
+  z-index: 51;
+  flex: 0 1 13.125rem;
   width: 13.125rem;
   height: 2.25rem;
   object-fit: contain;
   object-position: center;
+}
+@media (max-width: 62.99875em) {
+  .tophead__logo {
+    flex: 0 1 11.875rem;
+    width: 11.875rem;
+    height: 2.25rem;
+  }
+}
+@media (max-width: 31.93625em) {
+  .tophead__logo {
+    flex: 0 1 9.375rem;
+    width: 9.375rem;
+    height: 2.25rem;
+  }
 }
 .contacts {
   display: flex;
   align-items: center;
   column-gap: 3.4375rem;
   flex-wrap: wrap;
+}
+@media (max-width: 62.99875em) {
+  .contacts {
+    column-gap: 0.9375rem;
+  }
+}
+@media (max-width: 61.31125em) {
+  .contacts {
+    display: none;
+  }
+  .menu-open .contacts {
+    row-gap: 0.625rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    top: 4.25em;
+    left: 0;
+    width: 100%;
+    z-index: 51;
+  }
+}
+@media (max-width: 40.93625em) {
+  .menu-open .contacts {
+    justify-content: center;
+    column-gap: 1.875rem;
+  }
 }
 .contacts__item {
   display: flex;
@@ -174,31 +234,115 @@ body {
   width: 3.9375rem;
   height: 3.9375rem;
 }
+@media (max-width: 62.99875em) {
+  .item__image {
+    flex: 0 1 2.6875rem;
+    width: 2.6875rem;
+    height: 2.6875rem;
+  }
+}
 .item__text > div {
   margin-bottom: 0.1875rem;
+}
+@media (max-width: 40.93625em) {
+  .menu-open .item__text {
+    display: none;
+  }
 }
 
 .mainhead {
   background-color: rgba(255, 255, 255, 0.08);
   min-height: 4.875rem;
 }
+@media (max-width: 62.99875em) {
+  .mainhead {
+    min-height: 3rem;
+  }
+}
 .mainhead__container {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap;
   column-gap: 1.5625rem;
+}
+@media (max-width: 62.99875em) {
+  .mainhead__container {
+    align-items: center;
+    column-gap: 0.625rem;
+  }
 }
 .mainhead__side-info {
   column-gap: 3.125rem;
+}
+@media (max-width: 62.99875em) {
+  .mainhead__side-info {
+    column-gap: 0.9375rem;
+  }
 }
 
 .menu__nav {
   padding-top: 1.875rem;
 }
+@media (max-width: 62.99875em) {
+  .menu__nav {
+    padding: 0;
+  }
+}
+.menu__submenu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding-top: 0.5625rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.4s ease;
+  transform: translate(0, 0.625rem);
+  pointer-events: none;
+}
+
+@media (max-width: 61.31125em) {
+  .nav {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    bottom: 100%;
+    left: 0;
+    transition: bottom 0.3s;
+    background: rgba(9, 18, 66, 0.85);
+    padding: 11.875rem 0.9375rem 0.625rem 50%;
+    overflow: auto;
+    z-index: 49;
+  }
+  .nav::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 3.125rem;
+    top: 0;
+    left: 100%;
+    transition: left 0.3s;
+    z-index: 49;
+  }
+  .menu-open .nav, .menu-open .nav::before {
+    bottom: 0;
+  }
+}
 .nav__list {
   display: flex;
   column-gap: 3.75rem;
+  z-index: 49;
+}
+@media (max-width: 62.99875em) {
+  .nav__list {
+    column-gap: 2.1875rem;
+  }
+}
+@media (max-width: 61.31125em) {
+  .nav__list {
+    flex-direction: column;
+    row-gap: 1.25rem;
+    text-align: right;
+  }
 }
 .nav__item {
   position: relative;
@@ -234,6 +378,16 @@ body {
   transform: rotate(90deg);
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
+@media (max-width: 62.99875em) {
+  .nav__item:after {
+    left: 100%;
+  }
+}
+@media (max-width: 61.31125em) {
+  .nav__item {
+    font-size: 1.375rem;
+  }
+}
 @media (any-hover: hover) {
   .nav__item:hover {
     text-decoration: none;
@@ -253,16 +407,13 @@ body {
     transition: all 0.3s;
   }
 }
-.submenu {
-  display: none;
-}
 .side-info__social {
   column-gap: 1.375rem;
 }
 .side-info__link {
   display: inline-block;
-  padding: 1.75rem 3.25rem;
-  background: rgba(255, 255, 255, 0.96);
+  padding: 1.75em 3.25em;
+  background-color: rgba(255, 255, 255, 0.96);
   color: #000;
   font-family: "Krub", sans-serif;
   font-size: 1rem;
@@ -270,7 +421,110 @@ body {
   line-height: 1.3;
   text-align: center;
   text-transform: capitalize;
+  transition: color 0.4s;
+  z-index: 50;
 }
+@media (any-hover: hover) {
+  .side-info__link:hover {
+    background-color: rgba(9, 18, 66, 0.66);
+    color: rgba(255, 255, 255, 0.96);
+  }
+}
+@media (max-width: 62.99875em) {
+  .side-info__link {
+    padding: 1.25em 2.3125em;
+  }
+}
+@media (max-width: 61.31125em) {
+  .side-info__link {
+    padding: 0.9375em 2.625em;
+    position: absolute;
+    top: 0.5em;
+    right: 5.625em;
+  }
+}
+@media (max-width: 31.93625em) {
+  .side-info__link {
+    display: none;
+  }
+}
+.side-info__button {
+  padding: 1.3125rem 1.1875rem;
+  background: rgba(255, 255, 255, 0.96);
+}
+@media (min-width: 61.31125em) {
+  .side-info__button {
+    display: none;
+  }
+}
+@media (max-width: 61.31125em) {
+  .side-info__button {
+    z-index: 50;
+    padding: 1rem 1.1875rem;
+    position: absolute;
+    top: 0.5em;
+    right: 0.625em;
+  }
+  .menu-open .side-info__button {
+    background-color: rgba(255, 255, 255, 0.96);
+    position: absolute;
+    top: 0.5em;
+    right: 0.625em;
+    z-index: 51;
+  }
+}
+@media (max-width: 31.93625em) {
+  .side-info__button {
+    padding: 0.75rem;
+  }
+}
+.side-info__icon-menu {
+  display: none;
+}
+@media (max-width: 61.31125em) {
+  .side-info__icon-menu {
+    display: block;
+    width: 1.875rem;
+    height: 1.125rem;
+    flex: 0 0 1.875rem;
+    position: relative;
+    z-index: 10;
+  }
+  .side-info__icon-menu::before, .side-info__icon-menu::after,
+  .side-info__icon-menu span {
+    content: "";
+    height: 0.125rem;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    background-color: rgb(9, 18, 66);
+    transition: all 0.4s ease;
+  }
+  .side-info__icon-menu::before {
+    top: 0;
+  }
+  .side-info__icon-menu::after {
+    bottom: 0;
+  }
+  .side-info__icon-menu span {
+    top: 50%;
+    margin-top: -0.0625rem;
+  }
+  .menu-open .side-info__icon-menu::before, .menu-open .side-info__icon-menu::after {
+    top: 50%;
+    margin-top: -0.0625rem;
+  }
+  .menu-open .side-info__icon-menu span {
+    transform: scale(0);
+  }
+  .menu-open .side-info__icon-menu::before {
+    transform: rotate(-45deg);
+  }
+  .menu-open .side-info__icon-menu::after {
+    transform: rotate(45deg);
+  }
+}
+
 .social__item {
   display: inherit;
   flex-shrink: 0;
@@ -301,59 +555,6 @@ body {
   background-color: rgb(9, 18, 66);
   object-position: center;
   object-fit: cover;
-}
-
-.footer {
-  height: 6.25rem;
-  background: linear-gradient(126.56deg, rgb(255, 182, 41) 20.708%, rgb(255, 218, 86) 66.546%, rgb(255, 215, 166) 111.085%);
-}
-
-.button {
-  padding: 1.1875em 2.125em;
-  color: rgb(35, 33, 42);
-  font-family: "Krub", sans-serif;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1.3;
-  text-transform: capitalize;
-  transition: all 0.8s;
-  background: linear-gradient(126.56deg, rgb(255, 182, 41) -1.21%, rgb(255, 218, 86) 58.664%, rgb(255, 215, 166) 116.841%);
-  position: relative;
-  z-index: 5;
-  overflow: hidden;
-}
-.button:after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  pointer-events: none;
-  width: 12.875rem;
-  height: 12.875rem;
-  left: 4.625rem;
-  right: -5.375rem;
-  top: -2.6875rem;
-  bottom: -6.4375rem;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.96);
-  opacity: 0;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.6s, opacity 1.3s;
-}
-@media (any-hover: hover) {
-  .button:hover::after {
-    content: "";
-    opacity: 1;
-    transform: scaleX(1);
-  }
-}
-@media (any-hover: none) {
-  .button:active::after {
-    content: "";
-    opacity: 1;
-    transform: scaleX(1);
-    transition: transform 0s, opacity 0s;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
