--- a/transport-logistic/scss/style.scss
+++ b/transport-logistic/scss/style.scss
@@ -10,6 +10,7 @@
 //-----------------------------BODY.WRAPPER------------------------
 //-----------------------------------------------------------------
 body {
+  background-color: #6f83ab;
   font-family: $basic-font;
   font-size: $basic-fz;
   line-height: $basic-lh;
@@ -52,6 +53,17 @@ body {
   // .header__top
   &__top {
     padding: toRem(46) 0;
+
+    @media (max-width: toEm(1007.98)) {
+      padding: toRem(8) 0;
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      padding: toRem(15) 0;
+      .menu-open & {
+        padding-bottom: toRem(90);
+      }
+    }
   }
 
   // .header__main
@@ -60,8 +72,12 @@ body {
 }
 
 .tophead {
+  position: relative;
+  z-index: 50;
+
   background-color: $blue-color;
   color: $white-color;
+
   // .tophead__container
   &__container {
     max-width: toRem(1230);
@@ -74,11 +90,26 @@ body {
 
   // .tophead__logo
   &__logo {
+    position: relative;
+    z-index: 51;
+    flex: 0 1 toRem(210);
     width: toRem(210);
     height: toRem(36);
     object-fit: contain;
     object-position: center;
     @extend %image-size;
+
+    @media (max-width: toEm(1007.98)) {
+      flex: 0 1 toRem(190);
+      width: toRem(190);
+      height: toRem(36);
+    }
+
+    @media (max-width: $M-mob-bp) {
+      flex: 0 1 toRem(150);
+      width: toRem(150);
+      height: toRem(36);
+    }
   }
 
   // .tophead__contacts
@@ -94,6 +125,34 @@ body {
   align-items: center;
   column-gap: toRem(55);
   flex-wrap: wrap;
+
+  @media (max-width: toEm(1007.98)) {
+    column-gap: toRem(15);
+  }
+
+  @media (max-width: $tablet-breakpoint) {
+    display: none;
+
+    .menu-open & {
+      row-gap: toRem(10);
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      position: fixed;
+      top: toEm(68);
+      left: 0;
+      width: 100%;
+      z-index: 51;
+    }
+  }
+
+  @media (max-width: toEm(654.98)) {
+    .menu-open & {
+      justify-content: center;
+      column-gap: toRem(30);
+    }
+  }
+
   // .contacts__item
   &__item {
     display: flex;
@@ -127,14 +186,12 @@ body {
     width: toRem(63);
     height: toRem(63);
     @extend %image-size;
-    //transition: all 0.3s;
-    //transform: scale(1.0001);
 
-    //@media (any-hover: hover) {
-    //  &:hover {
-    //    transform: scale(1.05);
-    //  }
-    //}
+    @media (max-width: toEm(1007.98)) {
+      flex: 0 1 toRem(43);
+      width: toRem(43);
+      height: toRem(43);
+    }
   }
 
   // .item__text
@@ -142,19 +199,34 @@ body {
     > div {
       margin-bottom: toRem(3);
     }
+
+    @media (max-width: toEm(654.98)) {
+      .menu-open & {
+        display: none;
+      }
+    }
   }
 }
 
 .mainhead {
   background-color: $bg-gray;
   min-height: toRem(78);
+
+  @media (max-width: toEm(1007.98)) {
+    min-height: toRem(48);
+  }
   // .mainhead__container
   &__container {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     column-gap: toRem(25);
+
+    @media (max-width: toEm(1007.98)) {
+      align-items: center;
+      column-gap: toRem(10);
+    }
   }
 
   // .mainhead__menu
@@ -165,6 +237,10 @@ body {
   &__side-info {
     @extend %dis-flex-between;
     column-gap: toRem(50);
+
+    @media (max-width: toEm(1007.98)) {
+      column-gap: toRem(15);
+    }
   }
 }
 
@@ -172,19 +248,71 @@ body {
   // .menu__nav
   &__nav {
     padding-top: toRem(30);
+
+    @media (max-width: toEm(1007.98)) {
+      padding: 0;
+    }
   }
 
   // .menu__submenu
   &__submenu {
+    position: absolute;
+    top: $full-percentage;
+    left: 0;
+    padding-top: toRem(9);
+    visibility: hidden;
+    opacity: 0;
+    transition: $main-transition;
+    transform: translate(0, toRem(10));
+    pointer-events: none;
   }
 }
 
 .nav {
+  @media (max-width: $tablet-breakpoint) {
+    position: fixed;
+    width: $full-percentage;
+    height: $full-percentage;
+    bottom: 100%;
+    left: 0;
+    transition: bottom 0.3s;
+    background: rgba(9, 18, 66, 0.85);
+    padding: toRem(190) toRem(15) toRem(10) 50%;
+    overflow: auto;
+    z-index: 49;
+
+    &::before {
+      content: '';
+      position: fixed;
+      width: $full-percentage;
+      height: toRem(50);
+      top: 0;
+      left: $full-percentage;
+      transition: left 0.3s;
+      z-index: 49;
+    }
+
+    .menu-open &,
+    .menu-open &::before {
+      bottom: 0;
+    }
+  }
+
   // .nav__list
   &__list {
     display: flex;
     column-gap: toRem(60);
+    z-index: 49;
 
+    @media (max-width: toEm(1007.98)) {
+      column-gap: toRem(35);
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      flex-direction: column;
+      row-gap: toRem(20);
+      text-align: right;
+    }
   }
 
   // .nav__item
@@ -224,6 +352,32 @@ body {
       border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
+    @media (max-width: toEm(1007.98)) {
+      &:after {
+        left: 100%;
+      }
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      font-size: toRem(22);
+    }
+
+    //@media(any-hover: none) {
+    //  &:active::after {
+    //    content: '';
+    //    display: inline-block;
+    //    position: absolute;
+    //    top: 51%;
+    //    left: 147%;
+    //    flex: 0 1 toRem(4);
+    //    width: toRem(4);
+    //    height: toRem(4);
+    //    border-radius: 50%;
+    //    background-color: $white-color;
+    //    transition: none;
+    //  }
+    //}
+
     @media (any-hover: hover) {
       &:hover {
         text-decoration: none;
@@ -255,7 +409,7 @@ body {
 }
 
 .submenu {
-  display: none;
+
   // .submenu__list
   &__list {
   }
@@ -279,8 +433,8 @@ body {
   // .side-info__link
   &__link {
     display: inline-block;
-    padding: toRem(28) toRem(52);
-    background: $white-color;
+    padding: toEm(28) toEm(52);
+    background-color: $white-color;
     color: $black-color;
     font-family: $basic-font;
     font-size: toRem(16);
@@ -288,13 +442,123 @@ body {
     line-height: 1.3;
     text-align: center;
     text-transform: capitalize;
+    transition: color 0.4s;
+    z-index: 50;
 
     @media (any-hover: hover) {
       &:hover {
-
+        background-color: rgba(9, 18, 66, 0.66);
+        color: $white-color;
       }
     }
 
+    @media (max-width: toEm(1007.98)) {
+      padding: toEm(20) toEm(37);
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      padding: toEm(15) toEm(42);
+      position: absolute;
+      top: toEm(8);
+      right: toEm(90);
+    }
+
+    @media (max-width: $M-mob-bp) {
+      display: none;
+      //.menu-open & {
+      //  //position: relative;
+      //  //display: block;
+      //  //bottom: toEm(50);
+      //  //left: toEm(30);
+      //}
+    }
+  }
+
+  // .side-info__button
+  &__button {
+    padding: toRem(21) toRem(19);
+    background: $white-color;
+
+    @media (min-width: $tablet-breakpoint) {
+      display: none;
+    }
+
+    @media (max-width: $tablet-breakpoint) {
+      z-index: 50;
+      padding: toRem(16) toRem(19);
+      position: absolute;
+      top: toEm(8);
+      right: toEm(10);
+
+      .menu-open & {
+        background-color: $white-color;
+        position: absolute;
+        top: toEm(8);
+        right: toEm(10);
+        z-index: 51;
+      }
+    }
+
+    @media (max-width: $M-mob-bp) {
+      padding: toRem(12);
+    }
+  }
+
+  // .side-info__icon-menu
+  &__icon-menu {
+    display: none;
+
+    @media (max-width: $tablet-breakpoint) {
+      display: block;
+      width: toRem(30);
+      height: toRem(18);
+      flex: 0 0 toRem(30);
+      position: relative;
+      z-index: 10;
+
+      &::before,
+      &::after,
+      span {
+        content: '';
+        height: toRem(2);
+        width: $full-percentage;
+        position: absolute;
+        left: 0;
+        background-color: $blue-color;
+        transition: $main-transition;
+      }
+
+      &::before {
+        top: 0;
+      }
+
+      &::after {
+        bottom: 0;
+      }
+
+      span {
+        top: 50%;
+        margin-top: toRem(-1);
+      }
+
+      .menu-open &::before,
+      .menu-open &::after {
+        top: 50%;
+        margin-top: toRem(-1);
+      }
+
+      .menu-open & span {
+        transform: scale(0);
+      }
+
+      .menu-open &::before {
+        transform: rotate(-45deg);
+      }
+
+      .menu-open &::after {
+        transform: rotate(45deg);
+      }
+    }
   }
 }
 
@@ -355,59 +619,6 @@ body {
 
 //-------------------------------FOOTER-----------------------------------
 //------------------------------------------------------------------------
-.footer {
-  height: toRem(100);
-  background: linear-gradient(126.56deg, rgb(255, 182, 41) 20.708%, rgb(255, 218, 86) 66.546%, rgb(255, 215, 166) 111.085%);
-}
-
-.button {
-  padding: toEm(19) toEm(34);
-  color: rgb(35, 33, 42);
-  font-family: $basic-font;
-  font-size: toRem(16);
-  font-weight: 600;
-  line-height: 1.3;
-  text-transform: capitalize;
-  transition: all 0.8s;
-  background: linear-gradient(126.56deg, rgb(255, 182, 41) -1.21%, rgb(255, 218, 86) 58.664%, rgb(255, 215, 166) 116.841%);
-  position: relative;
-  z-index: 5;
-  overflow: hidden;
-
-  &:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    pointer-events: none;
-    width: toRem(206);
-    height: toRem(206);
-    left: toRem(74);
-    right: toRem(-86);
-    top: toRem(-43);
-    bottom: toRem(-103);
-    border-radius: 50%;
-    background: $white-color;
-    opacity: 0;
-    transform: scaleX(0);
-    transform-origin: right;
-    transition: transform 0.6s, opacity 1.3s;
-  }
-
-  @media (any-hover: hover) {
-    &:hover::after {
-      content: '';
-      opacity: 1;
-      transform: scaleX(1);
-    }
-  }
-
-  @media (any-hover: none) {
-    &:active::after {
-      content: '';
-      opacity: 1;
-      transform: scaleX(1);
-      transition: transform 0s, opacity 0s;
-    }
-  }
-}
-
+//.footer {
+//  height: toRem(100);
+//}
