--- a/transport-logistic/scss/_vars&&templates.scss
+++ b/transport-logistic/scss/_vars&&templates.scss
@@ -8,7 +8,7 @@ $third-font: 'League Spartan', sans-serif; //font
 
 //---------------COLORS--------------------
 $black-color: #000; // black color
-$white-color: rgba(255, 255, 255, 0.96); // white color
+$white-color: #FFFFFF; // white color
 //$yellow-color: rgb(246, 180, 38); // yellow color
 $yellow-color: rgb(255, 182, 41); // yellow color
 $grey-text-color: rgb(102, 108, 137);; // grey text color
