--- a/transport-logistic/scss/style.css
+++ b/transport-logistic/scss/style.css
@@ -75,7 +75,7 @@ textarea {
   height: 100%;
 }
 
-.item__image-card img, .bg__image img, .social__item img img, .item__image img, .tophead__logo img {
+.picture__down img img, .picture__up img img, .list__item__image img, .background__image img, .item__image-card img, .bg__image img, .social__item img img, .item__image img, .tophead__logo img {
   width: 100%;
   height: 100%;
 }
@@ -141,7 +141,7 @@ body {
   position: relative;
   z-index: 50;
   background-color: rgb(9, 18, 66);
-  color: rgba(255, 255, 255, 0.96);
+  color: #FFFFFF;
 }
 .tophead__container {
   max-width: 76.875rem;
@@ -296,7 +296,7 @@ body {
   position: absolute;
   top: 100%;
   left: -50%;
-  padding-top: 2.1875rem;
+  padding-top: 2.28125rem;
   visibility: hidden;
   opacity: 0;
   transition: all 0.4s ease;
@@ -357,7 +357,7 @@ body {
 }
 .nav__item {
   position: relative;
-  color: rgba(255, 255, 255, 0.96);
+  color: #FFFFFF;
   font-family: "Krub", sans-serif;
   font-size: 1rem;
   font-weight: 600;
@@ -373,7 +373,7 @@ body {
   flex: 0 1 2.6875rem;
   width: 2.6875rem;
   height: 0.125rem;
-  border: 1px solid rgba(255, 255, 255, 0.96);
+  border: 1px solid #FFFFFF;
   opacity: 0;
   transition: all 0.3s;
 }
@@ -406,7 +406,7 @@ body {
 @media (any-hover: hover) {
   .nav__item:hover {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.96);
+    color: #FFFFFF;
   }
   .nav__item:hover::before {
     content: "";
@@ -417,7 +417,7 @@ body {
     flex: 0 1 2.6875rem;
     width: 2.6875rem;
     height: 0.125rem;
-    border: 1px solid rgba(255, 255, 255, 0.96);
+    border: 1px solid #FFFFFF;
     opacity: 1;
     transition: all 0.3s;
   }
@@ -481,7 +481,7 @@ body {
 .side-info__link {
   display: inline-block;
   padding: 1.75em 3.25em;
-  background-color: rgba(255, 255, 255, 0.96);
+  background-color: #FFFFFF;
   color: #000;
   font-family: "Krub", sans-serif;
   font-size: 1rem;
@@ -497,7 +497,7 @@ body {
 @media (any-hover: hover) {
   .side-info__link:hover {
     background-color: rgba(9, 18, 66, 0.54);
-    color: rgba(255, 255, 255, 0.96);
+    color: #FFFFFF;
   }
 }
 @media (max-width: 62.99875em) {
@@ -526,7 +526,7 @@ body {
 }
 .side-info__button {
   padding: 1.3125rem 1.1875rem;
-  background: rgba(255, 255, 255, 0.96);
+  background: #FFFFFF;
 }
 @media (min-width: 61.31125em) {
   .side-info__button {
@@ -542,7 +542,7 @@ body {
     right: 0.625em;
   }
   .menu-open .side-info__button {
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: #FFFFFF;
     position: absolute;
     top: 0.5em;
     right: 0.625em;
@@ -642,7 +642,6 @@ body {
 .page__services {
   padding: 6rem 0;
 }
-
 .hero {
   position: relative;
   z-index: 5;
@@ -659,7 +658,7 @@ body {
 }
 
 .info__body {
-  color: rgba(255, 255, 255, 0.96);
+  color: #FFFFFF;
   max-width: 35rem;
   padding-top: 9.375rem;
   padding-bottom: 9.375rem;
@@ -719,7 +718,7 @@ body {
   top: -2.6875rem;
   bottom: -6.4375rem;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.96);
+  background: #FFFFFF;
   opacity: 0;
   transform: scaleX(0);
   transform-origin: right;
@@ -762,6 +761,10 @@ body {
   display: flex;
   column-gap: 2.5rem;
 }
+.services__body {
+  max-width: 18.4375rem;
+  min-height: 5.875rem;
+}
 .services__cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -769,10 +772,6 @@ body {
   column-gap: 4.375rem;
 }
 
-.body {
-  max-width: 18.4375rem;
-  min-height: 5.875rem;
-}
 .body__title {
   min-width: calc(30% + 0.5625rem);
   background: rgba(232, 232, 232, 0.5);
@@ -781,7 +780,7 @@ body {
 .body__title:not(:last-child) {
   margin-bottom: 1.0625rem;
 }
-.body__subtitle-serv {
+.body__subtitle {
   color: rgb(28, 31, 53);
   font-family: "Rubik", sans-serif;
   font-size: 2.1875rem;
@@ -836,6 +835,158 @@ body {
 }
 .info__about:not(:last-child) {
   margin-bottom: 0.8125rem;
+}
+
+.why-us {
+  position: relative;
+  z-index: 1;
+  min-height: calc(100dvh - 11.875rem);
+}
+.why-us__content {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 5rem;
+  padding: 5.3125rem 5.375rem 0 5.375rem;
+  background-color: #FFFFFF;
+  position: relative;
+  z-index: 6;
+  bottom: 8.875rem;
+}
+.why-us__content:not(:last-child) {
+  margin-bottom: 7rem;
+}
+.why-us__res {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 13.375rem;
+  row-gap: 2.625rem;
+}
+
+.background__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__body {
+  flex: 0 1 29.5rem;
+}
+.content__picture {
+  position: relative;
+  z-index: 5;
+}
+
+.body__subtitle:not(:last-child) {
+  margin-bottom: 1rem;
+}
+.body p:not(:last-of-type) {
+  margin-bottom: 2.25rem;
+}
+.body p:not(:last-child) {
+  margin-bottom: 1.5625rem;
+}
+.title--width {
+  min-width: calc(13% + 0.5625rem);
+}
+
+.list__item {
+  color: rgb(28, 31, 53);
+  font-family: "Rubik", sans-serif;
+  font-size: 1.5625rem;
+  display: flex;
+  align-items: center;
+  column-gap: 0.9375rem;
+}
+.list__item:not(:last-child) {
+  margin-bottom: 1.375rem;
+}
+.list__item__image {
+  flex: 0 0 3.625rem;
+  width: 3.625rem;
+  height: 3.625rem;
+  object-fit: contain;
+  object-position: center;
+}
+.picture__up img {
+  aspect-ratio: 461/415;
+  width: 28.8125rem;
+  height: 25.9375rem;
+  object-fit: cover;
+  object-position: center;
+}
+.picture__down {
+  position: absolute;
+  top: 55%;
+  right: 58%;
+}
+.picture__down img {
+  aspect-ratio: 272/195;
+  width: 17rem;
+  height: 12.1875rem;
+  object-fit: cover;
+  object-position: center;
+  border-right: 1.875rem solid #FFFFFF;
+  border-top: 1.875rem solid #FFFFFF;
+}
+
+.res {
+  position: relative;
+  z-index: 6;
+  bottom: 8.875rem;
+}
+.res:before, .res:after {
+  content: "";
+  display: inline-block;
+  flex: 0 0 63.75rem;
+  width: 63.75rem;
+  height: 0.0625rem;
+  border: 1px solid rgb(213, 213, 213);
+}
+.res__item {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+
+.item--left {
+  padding-left: 10.1875rem;
+}
+.item--left:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  flex: 0 0 0.0625rem;
+  width: 0.0625rem;
+  height: 9.125rem;
+  border: 1px solid rgb(213, 213, 213);
+}
+.item--right {
+  padding-right: 10.1875rem;
+}
+.item span {
+  color: rgb(28, 31, 53);
+  font-family: "Rubik", sans-serif;
+  font-size: 3.125rem;
+  font-weight: 600;
+}
+.item__res-text {
+  color: rgb(28, 31, 53);
+  font-family: League Spartan, sans-serif;
+  font-size: 1.25rem;
+  display: flex;
+  align-items: flex-start;
+  column-gap: 1.0625rem;
+}
+.item__res-text:before {
+  content: "";
+  flex: 0 0 1.0625rem;
+  width: 1.0625rem;
+  height: 1.0625rem;
+  background: linear-gradient(126.56deg, rgb(255, 182, 41) 7.605%, rgb(255, 218, 86) 61.834%, rgb(255, 215, 166) 114.526%);
 }
 
 /*# sourceMappingURL=style.css.map */
